<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chanaka.bodima.auth.SignupActivity"
    android:background="@color/white"
    android:paddingVertical="0dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <LinearLayout
            android:id="@+id/R1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:src="@drawable/sample"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:id="@+id/bicon"
                />
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Create | Join"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:typeface="serif"
                android:background="#90000000"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingTop="160dp">

            <LinearLayout
                android:id="@+id/lnr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:background="@drawable/linearbackground"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <!--<ImageView-->
                            <!--android:layout_width="25dp"-->
                            <!--android:layout_height="30dp"-->
                            <!--android:src="@drawable/username"-->
                            <!--android:id="@+id/usernameicon"-->
                            <!--android:layout_marginTop="11dp"-->

                            <!--/>-->

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/email"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>


                            <!--<ImageView-->
                            <!--android:layout_width="25dp"-->
                            <!--android:layout_height="30dp"-->
                            <!--android:src="@drawable/lock"-->
                            <!--android:id="@+id/lock1"-->
                            <!--android:layout_marginTop="29dp"-->
                            <!--android:layout_below="@id/usernameicon"-->
                            <!--/>-->

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="5dp">

                                <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusableInTouchMode="true"
                                android:hint="@string/hint_password"
                                android:imeActionId="@+id/login"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"/>

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/name"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>
                    </ScrollView>
                </RelativeLayout>

            </LinearLayout>


            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/lnr2"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background_1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Sign Up"
                android:stateListAnimator="@null"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <Button
            android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/sign_up_button"
                android:layout_marginTop="15dip"
                android:background="@drawable/button_background_1"
                android:fontFamily="sans-serif-condensed"
                android:stateListAnimator="@null"
            android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="#FFFF"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_in_button"
                android:layout_marginTop="5dip"
                android:background="@null"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false" />


        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="#90000000"
        android:paddingHorizontal="140dp"
        android:paddingVertical="100dp"
        android:visibility="gone" />

</RelativeLayout>


