<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context="com.chanaka.bodima.AddExpenseActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_depense"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:elevation="0dp">

        <ImageButton
            android:id="@+id/btn_expense_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:src="@mipmap/ic_arrow_back_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Add New Expense"
            android:textColor="@color/white"
            android:textSize="18dp"/>

    </android.support.v7.widget.Toolbar>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar_depense"
    android:orientation="vertical"
    android:background="#20000000">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingBottom="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/linearbackground"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/expense_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_newexpense"
                        android:text=""
                        android:maxLength="13"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="80dp"
           android:background="@drawable/linearbackground"
           android:layout_marginTop="20dp"
           android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/expense_amount"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:hint="@string/hint_amount"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

       </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/linearbackground">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="16dp"
                android:layout_height="wrap_content"
                android:text="Category"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"/>
            <Spinner
                android:id="@+id/expense_category"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/linearbackground"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="Payer Name"
                android:layout_marginRight="27dp"/>
            <Spinner
                android:id="@+id/expense_payername"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:background="@drawable/linearbackground"
           android:padding="10dp"
           android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="16dp"
            android:text="Attendees"/>

            <ListView
                android:id="@+id/listview_users_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:background="@color/white" />
       </LinearLayout>

            <Button
                android:id="@+id/btn_modify_expense"
                android:layout_width="fill_parent"
                android:layout_height="60dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_background_2"
                android:stateListAnimator="@null"
                android:text="@string/btn_add_expense"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="#90000000"
        android:paddingHorizontal="140dp"
        android:paddingVertical="100dp"
        android:visibility="gone" />


</RelativeLayout>
